Revisions for index.html
Revisions for index.html homepage

--- a/3D_Prints.html
+++ b/3D_Prints.html
@@ -13,7 +13,7 @@
 		</header>
 		
 	<nav>
-		<a href="finalproject_index.html">Home</a> &nbsp;
+		<a href="index.html">Home</a> &nbsp;
 		<a href="Christmas_Cards.html">Christmas Cards</a> &nbsp;
 		<a href="Christmas_Ornaments.html">Christmas Ornaments</a> &nbsp;
 		<a href="3D_Prints.html">3D Prints</a> &nbsp;
