--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 		<p class="black-lettering">
 			Welcome! Alex sells a wide assortment
-			of ornaments, cards, and other Holiday confectionaries year-round!
+			of ornaments, cards, and other Holiday confectionaries year-round! Custom order on some items. 
 		</p>
 
 		<div class="grid-container-2">
