--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<a href="index.html">Home</a> &nbsp;
 		<a href="Christmas_Cards.html">Christmas Cards</a> &nbsp;
 		<a href="Christmas_Ornaments.html">Christmas Ornaments</a> &nbsp;
-		<a href="3D_Prints.html">3D Prints</a> &nbsp;
+		<a href="3D_Prints.html">Spring</a> &nbsp;
 		<a href="Contact_Us.html">Contact Us</a> &nbsp;
 	</nav>
 
